--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -75,7 +75,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">BTC</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<p>비트코인</p>
 									</header>
 								</article>
 								<article>
@@ -84,7 +84,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">ETH</a></h3>
-										<p>feugiat amet tempus</p>
+										<p>이더리움</p>
 									</header>
 								</article>
 								<article>
@@ -93,7 +93,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">DASH</a></h3>
-										<p>Lorem etiam nullam</p>
+										<p>대쉬코인</p>
 									</header>
 								</article>
 								<article>
@@ -102,7 +102,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">LTC</a></h3>
-										<p>Nisl sed aliquam</p>
+										<p>라이트코인</p>
 									</header>
 								</article>
 								<article>
@@ -111,7 +111,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">ETC</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<p>이더리움 클래식</p>
 									</header>
 								</article>
 								<article>
@@ -120,7 +120,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">XRP</a></h3>
-										<p>Feugiat amet tempus</p>
+										<p>리플</p>
 									</header>
 								</article>
 							</section>
