차트 토글처리

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -74,7 +74,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">BTC</a></h3>
+										<h3><a href="generic.html" class="link">BTC</a></h3>
 										<p>비트코인</p>
 									</header>
 								</article>
@@ -83,7 +83,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">ETH</a></h3>
+										<h3><a href="generic.html" class="link">ETH</a></h3>
 										<p>이더리움</p>
 									</header>
 								</article>
@@ -92,7 +92,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">DASH</a></h3>
+										<h3><a href="generic.html" class="link">DASH</a></h3>
 										<p>대쉬코인</p>
 									</header>
 								</article>
@@ -101,7 +101,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">LTC</a></h3>
+										<h3><a href="generic.html" class="link">LTC</a></h3>
 										<p>라이트코인</p>
 									</header>
 								</article>
@@ -110,7 +110,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">ETC</a></h3>
+										<h3><a href="generic.html" class="link">ETC</a></h3>
 										<p>이더리움 클래식</p>
 									</header>
 								</article>
@@ -119,7 +119,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">XRP</a></h3>
+										<h3><a href="generic.html" class="link">XRP</a></h3>
 										<p>리플</p>
 									</header>
 								</article>
@@ -129,9 +129,11 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>비트코인 시세 조회 서비스</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<p style="font-size:13px;">'비트코인 시세 조회' 서비스는 가상화폐의 다양한 종류, 그리고 거래소 별 시세 차이를 한 눈에 쉽게 그래프 차트로 제공하는 것을 목적으로 합니다.</p>
+									<p style="font-size:13px;">'비트코인 시세 조회' 서비스를 통해, 사용자들은 다양한 가상화폐의 시세와 거래소 별 시세 차이를 편하게 파악하고 수익률 증진에 도움받을 수 있습니다.</p>
+									<p style="font-size:13px;">또한 '내 지갑 관리' 기능을 통해, 사용자가 직접 본인이 구매한 가상화폐의 종류와 금액을 입력하고, 현재 시세와 비교하여 현재 매도 시 얻을 수 있는 수익률을 자동 계산하는 기능을 추가로 제공합니다.</p>
 									<ul class="actions">
 										<li><a href="landing.html" class="button next">Get Started</a></li>
 									</ul>
