--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -79,7 +79,7 @@
 								<li>ⓒ 2017. kData Bitcoin Viewer Team all rights reserved.</li>
 							</ul>
 						</div>
-						
+					</footer>
 
 			</div>
 
