--- a/WebContent/landing.html
+++ b/WebContent/landing.html
@@ -68,78 +68,124 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
-								<div class="inner">
-									<header class="major">
-										<h2>Sed amet aliquam</h2>
-									</header>
-									<p id = "areaText">
-										<script>
-										$.ajax({
-											  url: "test/demo.html",
-											  cache: false
-											})
-											  .done(function( html ) {
-											    $( "#areaText" ).append( html );
-											  });
-										</script>
-					</p>
-								</div>
-							</section>
+			<section id="one">
+				<div class="inner">
+					<header class="major">
+						<h2>Sed amet aliquam</h2>
+					</header>
+					<p id="areaText"></p>
+					<script>
+						$.ajax({
+							url : "test/demo.html",
+							cache : false
+						}).done(function(html) {
+							$("#areaText").append(html);
+						});
+					</script>
 
-						<!-- Two -->
-							<section id="two" class="spotlights">
-								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
-									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3>Orci maecenas</h3>
-											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
-											</ul>
-										</div>
-									</div>
-								</section>
-								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
-									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3>Rhoncus magna</h3>
-											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
-											</ul>
-										</div>
-									</div>
-								</section>
-								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
-									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3>Sed nunc ligula</h3>
-											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
-											</ul>
-										</div>
-									</div>
-								</section>
-							</section>
+				</div>
+			</section>
+			<ul class="actions"
+				style="width: 15%; margin: 20px auto; margin-bottom: 100px;">
+				<li>
+					<button id="clickButton" onclick="openVolume()">거래량보기</button>
+					<button id="clickButton2" onclick="openVolume()">시세보기</button>
+				</li>
+			</ul>
+			<script>
+			count = 1;
+			function openVolume() {
+			
+			if (count == 1) {
+					$.ajax({
+						url : "test/demo2.html",
+						cache : false
+					}).done(function(html) {
+						$("#areaText").html(html);
+						$("#clickButton2").css("display","block");
+						$("#clickButton").css("display","none");
+					});
+					count = 0;
+				} else {
+					$.ajax({
+						url : "test/demo3.html",
+						cache : false
+					}).done(function(html) {
+						$("#areaText").html(html);
+						$("#clickButton").css("display","block");
+						$("#clickButton2").css("display","none");
+					});
+					count = 1;
+				}
+			}
+		</script>
+			<!-- Two -->
+			<section id="two" class="spotlights">
+				<section>
+					<a href="generic.html" class="image"> <img
+						src="images/pic08.jpg" alt="" data-position="center center" />
+					</a>
+					<div class="content">
+						<div class="inner">
+							<header class="major">
+								<h3>Orci maecenas</h3>
+							</header>
+							<p>Nullam et orci eu lorem consequat tincidunt vivamus et
+								sagittis magna sed nunc rhoncus condimentum sem. In efficitur
+								ligula tate urna. Maecenas massa sed magna lacinia magna
+								pellentesque lorem ipsum dolor. Nullam et orci eu lorem
+								consequat tincidunt. Vivamus et sagittis tempus.</p>
+							<ul class="actions">
+								<li><a href="generic.html" class="button">Learn more</a></li>
+							</ul>
+						</div>
+					</div>
+				</section>
+				<section>
+					<a href="generic.html" class="image"> <img
+						src="images/pic09.jpg" alt="" data-position="top center" />
+					</a>
+					<div class="content">
+						<div class="inner">
+							<header class="major">
+								<h3>Rhoncus magna</h3>
+							</header>
+							<p>Nullam et orci eu lorem consequat tincidunt vivamus et
+								sagittis magna sed nunc rhoncus condimentum sem. In efficitur
+								ligula tate urna. Maecenas massa sed magna lacinia magna
+								pellentesque lorem ipsum dolor. Nullam et orci eu lorem
+								consequat tincidunt. Vivamus et sagittis tempus.</p>
+							<ul class="actions">
+								<li><a href="generic.html" class="button">Learn more</a></li>
+							</ul>
+						</div>
+					</div>
+				</section>
+				
 
-						<!-- Three -->
+				<section>
+					<a href="generic.html" class="image"> <img
+						src="images/pic10.jpg" alt="" data-position="25% 25%" />
+					</a>
+					<div class="content">
+						<div class="inner">
+							<header class="major">
+								<h3>Sed nunc ligula</h3>
+							</header>
+							<p>Nullam et orci eu lorem consequat tincidunt vivamus et
+								sagittis magna sed nunc rhoncus condimentum sem. In efficitur
+								ligula tate urna. Maecenas massa sed magna lacinia magna
+								pellentesque lorem ipsum dolor. Nullam et orci eu lorem
+								consequat tincidunt. Vivamus et sagittis tempus.</p>
+							<ul class="actions">
+								<li><a href="generic.html" class="button">Learn more</a></li>
+							</ul>
+						</div>
+					</div>
+				</section>
+			</section>
+
+			<!-- Three -->
 							<section id="three">
 								<div class="inner">
 									<header class="major">
