--- a/WebContent/join.html
+++ b/WebContent/join.html
@@ -56,7 +56,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+								<form method="post" action="coin">
 								<h2 style="text-align:center; border-bottom:2px solid; border-bottom-color:white; margin-bottom:80px;
 								margin-top:0px !important;">회&nbsp;&nbsp;&nbsp;원&nbsp;&nbsp;&nbsp;가&nbsp;&nbsp;&nbsp;입</h2>
 									<div class="field half">
@@ -80,6 +80,9 @@
 										<textarea name="message" id="message" rows="6"></textarea>
 									</div> -->
 									<br>
+									
+									<input type="hidden" name="command" value="memberInsert" />
+									
 									<ul class="actions" style="margin:0 auto !important; width:44%;">
 										<li><input type="submit" value="가입 신청" class="special" /></li>
 										<li><input type="reset" value="다시 작성" /></li>
