--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -52,18 +52,19 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+								<form method="post" action="coin">
 								<h2 style="text-align:center; border-bottom:2px solid; border-bottom-color:white; margin-bottom:80px;
 								margin-top:0px !important;">로&nbsp;&nbsp;&nbsp;그&nbsp;&nbsp;&nbsp;인</h2>
 									<div class="field half">
 										<label for="id">아이디</label>
 										<input type="text" name="id" id="id" />
 									</div>
-									<div class="field half">
+									<div >
 										<label for="pw">비밀번호</label>
-										<input type="text" name="pw" id="pw" />
+										<input type="password" name="pw" id="pw" />
 									</div>
 									<br>
+									<input type="hidden" name="command"  value="login"/>
 									<ul class="actions" style="margin:0 auto !important; width:44%;">
 										<li><input type="submit" value="로&nbsp;&nbsp;그&nbsp;&nbsp;인" class="special" /></li>
 										<li><input type="reset" value="다시 작성" /></li>
