메인페이지 수정

--- a/WebContent/generic.html
+++ b/WebContent/generic.html
@@ -22,7 +22,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<a href="index.html" class="logo"><strong>이름이 없어요....</strong></a>
+			<a href="index.jsp" class="logo"><strong>이름이 없어요....</strong></a>
 			<nav>
 				<a href="#menu">Menu</a>
 			</nav>
