--- a/WebContent/generic.html
+++ b/WebContent/generic.html
@@ -22,7 +22,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<a href="index.html" class="logo"><strong>이름이 없어요....</strong></a>
+			<a href="index.jsp" class="logo"><strong>이름이 없어요....</strong></a>
 			<nav>
 				<a href="#menu">Menu</a>
 			</nav>
@@ -31,7 +31,7 @@
 		<!-- Menu -->
 		<nav id="menu">
 			<ul class="links">
-				<li><a href="index.html">Home</a></li>
+				<li><a href="index.jsp">Home</a></li>
 				<li><a href="landing.html">Landing</a></li>
 				<li><a href="generic.html">Generic</a></li>
 				<li><a href="elements.html">Elements</a></li>
