--- a/WebContent/join.html
+++ b/WebContent/join.html
@@ -69,7 +69,7 @@
 									</div>
 									<div class="field half">
 										<label for="pw">비밀번호</label>
-										<input type="text" name="pw" id="pw" />
+										<input type="password" name="pw" id="pw" />
 									</div>
 									<div class="field half">
 										<label for="email">이메일</label>
