--- a/WebContent/generic.html
+++ b/WebContent/generic.html
@@ -22,8 +22,22 @@
 
 		<!-- Header -->
 		<header id="header">
-			<a href="index.jsp" class="logo"><strong>이름이 없어요....</strong></a>
+			<a href="index.jsp" class="logo"><img src="images/coinsight.png"
+				style="width: 260px; height: 60px;"></a>
 			<nav>
+				<c:if test="${empty sessionScope.member}">
+					<p>
+						<a href="join.html">JOIN</a>
+					</p>
+					<p>
+						<a href="login.html">LOGIN</a>
+					</p>
+				</c:if>
+				<c:if test="${not empty sessionScope.member}">
+					<p>
+						<a href="coin?command=logout">logout</a>
+					</p>
+				</c:if>
 				<a href="#menu">Menu</a>
 			</nav>
 		</header>
@@ -31,8 +45,8 @@
 		<!-- Menu -->
 		<nav id="menu">
 			<ul class="links">
-				<li><a href="index.jsp">Home</a></li>
-				<li><a href="landing.html">Landing</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="wallet.jsp">wallet</a></li>
 				<li><a href="generic.html">Generic</a></li>
 				<li><a href="elements.html">Elements</a></li>
 			</ul>
