--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -1,98 +1,113 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Generic - Forty by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<style type="text/css">
-		
-			form .field.half {
-					width: 100% !important;
-					float: none;
-					padding: 0;
-				}
-			#contact > .inner > :nth-child(2n - 1) {
-				width:55% !important;
-				margin: 0 auto;
-				padding-right:0px !important;
-				border-right:0px !important;
-			}
-		</style>
-	</head>
-	<body>
+<head>
+<title>Generic - Forty by HTML5 UP</title>
+<meta charset="utf-8" />
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, user-scalable=no" />
+<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+<link rel="stylesheet" href="assets/css/main.css" />
+<style type="text/css">
+form .field.half {
+	width: 100% !important;
+	float: none;
+	padding: 0;
+}
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+#contact>.inner>:nth-child(2n - 1) {
+	width: 55% !important;
+	margin: 0 auto;
+	padding-right: 0px !important;
+	border-right: 0px !important;
+}
+</style>
+</head>
+<body>
 
-				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-						<ul class="actions vertical">
-							<li><a href="#" class="button special fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
-						</ul>
-					</nav>
+		<!-- Header -->
+		<header id="header">
+			<a href="index.jsp" class="logo"><img src="images/coinsight.png"
+				style="width: 260px; height: 60px;"></a>
+			<nav>
+				<c:if test="${empty sessionScope.member}">
+					<p>
+						<a href="join.html">JOIN</a>
+					</p>
+					<p>
+						<a href="login.html">LOGIN</a>
+					</p>
+				</c:if>
+				<c:if test="${not empty sessionScope.member}">
+					<p>
+						<a href="coin?command=logout">logout</a>
+					</p>
+				</c:if>
+				<a href="#menu">Menu</a>
+			</nav>
+		</header>
 
-				<!-- Contact -->
-					<section id="contact">
-						<div class="inner">
-							<section>
-								<form method="post" action="coin">
-								<h2 style="text-align:center; border-bottom:2px solid; border-bottom-color:white; margin-bottom:80px;
-								margin-top:0px !important;">로&nbsp;&nbsp;&nbsp;그&nbsp;&nbsp;&nbsp;인</h2>
-									<div class="field half">
-										<label for="id">아이디</label>
-										<input type="text" name="id" id="id" />
-									</div>
-									<div >
-										<label for="pw">비밀번호</label>
-										<input type="password" name="pw" id="pw" />
-									</div>
-									<br>
-									<input type="hidden" name="command"  value="login"/>
-									<ul class="actions" style="margin:0 auto !important; width:44%;">
-										<li><input type="submit" value="로&nbsp;&nbsp;그&nbsp;&nbsp;인" class="special" /></li>
-										<li><input type="reset" value="다시 작성" /></li>
-									</ul>
-								</form>
-							</section>
+		<!-- Menu -->
+		<nav id="menu">
+			<ul class="links">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="wallet.jsp">wallet</a></li>
+				<li><a href="generic.html">Generic</a></li>
+				<li><a href="elements.html">Elements</a></li>
+			</ul>
+			<ul class="actions vertical">
+				<li><a href="#" class="button special fit">Get Started</a></li>
+				<li><a href="#" class="button fit">Log In</a></li>
+			</ul>
+		</nav>
+
+		<!-- Contact -->
+		<section id="contact">
+			<div class="inner">
+				<section>
+					<form method="post" action="coin">
+						<h2
+							style="text-align: center; border-bottom: 2px solid; border-bottom-color: white; margin-bottom: 80px; margin-top: 0px !important;">로&nbsp;&nbsp;&nbsp;그&nbsp;&nbsp;&nbsp;인</h2>
+						<div class="field half">
+							<label for="id">아이디</label> <input type="text" name="id" id="id" />
 						</div>
-					</section>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner" style="padding:10px !important; text-align:center; width:60%;">
-							<ul class="copyright" >
-								<li>ⓒ 2017. kData Bitcoin Viewer Team all rights reserved.</li>
-							</ul>
+						<div>
+							<label for="pw">비밀번호</label> <input type="password" name="pw"
+								id="pw" />
 						</div>
-					</footer>
-
+						<br> <input type="hidden" name="command" value="login" />
+						<ul class="actions" style="margin: 0 auto !important; width: 44%;">
+							<li><input type="submit" value="로&nbsp;&nbsp;그&nbsp;&nbsp;인"
+								class="special" /></li>
+							<li><input type="reset" value="다시 작성" /></li>
+						</ul>
+					</form>
+				</section>
 			</div>
+		</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+		<!-- Footer -->
+		<footer id="footer">
+			<div class="inner"
+				style="padding: 10px !important; text-align: center; width: 60%;">
+				<ul class="copyright">
+					<li>ⓒ 2017. kData Bitcoin Viewer Team all rights reserved.</li>
+				</ul>
+			</div>
+		</footer>
 
-	</body>
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="assets/js/main.js"></script>
+
+</body>
 </html>
