historyData 폴더 생성 및 데이터 이동

--- a/WebContent/historyData/btc_historydata.html
+++ b/WebContent/historyData/btc_historydata.html
@@ -31,6 +31,7 @@
 	        method : "post",
 	        dataType : "html",
 	        success : function(result) {
+	        	console.log(result);
 	           var jsonData = JSON.parse(result);
 	           var data = new Array();
 	           var close = "";
