--- a/WebContent/test/btc_price.html
+++ b/WebContent/test/btc_price.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" type="text/css" href="https://www.highcharts.com/media/com_demo/css/highslide.css" />
 
 <pre id="csv" style="display:none">DAY,BITHUMB,POLONEIX
+DAY,BITHUMB,POLONEIX
 2017-07-01 00:00:00,3087000,2788213
 2017-07-01 04:00:00,3068000,2719348
 2017-07-01 08:00:00,3046000,2661384
@@ -52,6 +53,7 @@
 2017-07-07 12:00:00,3092000,2828262
 2017-07-07 16:00:00,3076000,2787048
 2017-07-07 20:00:00,3084000,2804999
+
 
 </pre><div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 <script>
