--- a/WebContent/test/btc_volume.html
+++ b/WebContent/test/btc_volume.html
@@ -1,83 +1,101 @@
 <meta charset="euc-kr" />
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://code.highcharts.com/modules/data.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 
-<!-- Additional files for the Highslide popup effect -->
-<script src="https://www.highcharts.com/media/com_demo/js/highslide-full.min.js"></script>
-<script src="https://www.highcharts.com/media/com_demo/js/highslide.config.js" charset="utf-8"></script>
-<link rel="stylesheet" type="text/css" href="https://www.highcharts.com/media/com_demo/css/highslide.css" />
+<pre id="csv" style="display:none">DAY,BITHUMB
+2017-07-01 00:00:00,15
+2017-07-01 04:00:00,44
+2017-07-01 08:00:00,46
+</pre>
+<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 
-<pre id="csv" style="display:none">DAY,BITHUMB,POLONEIX
-2017-07-01 00:00:00,15,2654184
-2017-07-01 04:00:00,44,6772508
-2017-07-01 08:00:00,46,5628487
-2017-07-01 12:00:00,113,3110462
-2017-07-01 16:00:00,48,1415255
-2017-07-01 20:00:00,37,3531118
-2017-07-02 00:00:00,91,6648026
-2017-07-02 04:00:00,25,6986861
-2017-07-02 08:00:00,58,4083242
-2017-07-02 12:00:00,116,3137714
-2017-07-02 16:00:00,48,4257612
-2017-07-02 20:00:00,37,3685830
-2017-07-03 00:00:00,91,5218400
-2017-07-03 04:00:00,25,4075401
-2017-07-03 08:00:00,58,2922398
-2017-07-03 12:00:00,116,3641778
-2017-07-03 16:00:00,85,2985665
-2017-07-03 20:00:00,55,13019356
-2017-07-04 00:00:00,119,4240746
-2017-07-04 04:00:00,8,5554293
-2017-07-04 08:00:00,48,6452156
-2017-07-04 12:00:00,273,1420234
-2017-07-04 16:00:00,119,5420758
-2017-07-04 20:00:00,43,4900138
-2017-07-05 00:00:00,91,4789298
-2017-07-05 04:00:00,4,2822973
-2017-07-05 08:00:00,31,2632012
-2017-07-05 12:00:00,90,3361587
-2017-07-05 16:00:00,124,2375111
-2017-07-05 20:00:00,57,4055090
-2017-07-06 00:00:00,62,3359171
-2017-07-06 04:00:00,33,3592890
-2017-07-06 08:00:00,47,2227988
-2017-07-06 12:00:00,76,2167732
-2017-07-06 16:00:00,153,3154346
-2017-07-06 20:00:00,120,2687989
-2017-07-07 00:00:00,51,1638561
-2017-07-07 04:00:00,11,2108824
-2017-07-07 08:00:00,21,3079473
-2017-07-07 12:00:00,112,5784147
-2017-07-07 16:00:00,56,4586400
-2017-07-07 20:00:00,75,8035290
-
-
-</pre><div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 <script>
 
+<!--
+function handleFiles() {
+
+    $(document).ready(function () {
+        $.ajax({
+            type: "GET",
+            url: "D:\Docs\Desktop\csvfile.csv",
+            dataType: "csv",
+            success: function (data) { processData(data); }
+        });
+    });
+}
+-->
+
+$.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.csv&callback=?', function (csv) {
  Highcharts.chart('container', {
+	 colors: ['#2b908f', '#90ee7e', '#f45b5b', '#7798BF', '#aaeeee', '#ff0066', '#eeaaee',
+	      '#55BF3B', '#DF5353', '#7798BF', '#aaeeee'],
+	   chart: {
+	      backgroundColor: {
+	         linearGradient: { x1: 0, y1: 0, x2: 1, y2: 1 },
+	         stops: [
+	            [0, '#242943'],
+	            [1, '#242943']
+	         ]
+	      },
+	      style: {
+	         fontFamily: '\'Unica One\', sans-serif'
+	      },
+	      plotBorderColor: '#242943'
+	   },
 
      data: {
          csv: document.getElementById('csv').innerHTML
      },
 
      title: {
-         text: '시세 정보'
+         text: '시세 정보',
+         style: {
+             color: '#E0E0E3',
+             textTransform: 'uppercase',
+             fontSize: '20px'
+          }
      },
 
      subtitle: {
-         text: '일주일간 시세'
+         text: '일주일간 시세',
+         style: {
+             color: '#E0E0E3',
+             textTransform: 'uppercase'
+          }
      },
 
      xAxis: {
          tickInterval: 4 * 3600 * 1000, // 4시간 단위
          tickWidth: 0,
+         gridLineColor: '#707073',
+         labels: {
+            style: {
+               color: '#E0E0E3'
+            }
+         },
+         lineColor: '#707073',
+         minorGridLineColor: '#505053',
+         tickColor: '#707073',
+         title: {
+            style: {
+               color: '#A0A0A3'
+            }
+         }
      },
 
      yAxis: [{ // left y axis
-         title: {
+    	 gridLineColor: '#707073',
+         labels: {
+            style: {
+               color: '#E0E0E3'
+            }
+         },
+         lineColor: '#707073',
+         minorGridLineColor: '#505053',
+         tickColor: '#707073',
+         tickWidth: 1,
+    	 title: {
              text: null
          },
          gridLineWidth: 3,
@@ -103,14 +121,70 @@
          verticalAlign: 'top',
          y: 20,
          floating: true,
-         borderWidth: 0
+         borderWidth: 0,
+         itemStyle: {
+             color: '#E0E0E3'
+          },
+          itemHoverStyle: {
+             color: '#FFF'
+          },
+          itemHiddenStyle: {
+             color: '#606063'
+          }
      },
 
      tooltip: {
-         shared: true,
-         crosshairs: true
+   	      backgroundColor: 'rgba(0, 0, 0, 0.85)',
+   	      style: {
+   	         color: '#F0F0F0'
+   	      }
      },
+     plotOptions: {
+         series: {
+            dataLabels: {
+               color: '#B0B0B3'
+            },
+            marker: {
+               lineColor: '#333'
+            }
+         },
+         boxplot: {
+            fillColor: '#505053'
+         },
+         candlestick: {
+            lineColor: 'white'
+         },
+         errorbar: {
+            color: 'white'
+         }
+      },
+      drilldown: {
+          activeAxisLabelStyle: {
+             color: '#F0F0F3'
+          },
+          activeDataLabelStyle: {
+             color: '#F0F0F3'
+          }
+       },
 
+       navigation: {
+          buttonOptions: {
+             symbolStroke: '#DDDDDD',
+             theme: {
+                fill: '#505053'
+             }
+          }
+       },
+      credits: {
+          style: {
+             color: '#666'
+          }
+       },
+       labels: {
+          style: {
+             color: '#707073'
+          }
+       },
      series: [{
          name: 'Bithumb',
          lineWidth: 4,
@@ -121,4 +195,5 @@
          name: 'Poloneix'
      }]
  });
+});
 </script>
